// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show count and amount of multiple expenses 1`] = `
<div>
  <h1>
    Viewing 2 expenses Totalling $94.34
  </h1>
</div>
`;

exports[`should show count and amount of single expense 1`] = `
<div>
  <h1>
    Viewing 1 expense Totalling $94.34
  </h1>
</div>
`;
